Cfn/SecurityGroup.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Security Group
#----------------------------------------------
Resources:
  # See https://docs.aws.amazon.com/ja_jp/directoryservice/latest/admin-guide/ms_ad_tutorial_setup_trust_prepare_mad.html
  InternalAdSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for AD"
      GroupName: InternalAdSG
      VpcId:
        Fn::ImportValue: !Sub FSx-VPC-InternalVpcId
      SecurityGroupIngress:
        -
          # DNS(tcp)
          IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 10.0.0.0/8
        -
          # DNS(udp)
          IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: 10.0.0.0/8
        -
          # Kerberos(tcp)
          IpProtocol: tcp
          FromPort: 88
          ToPort: 88
          CidrIp: 10.0.0.0/8
        -
          # Kerberos(udp)
          IpProtocol: udp
          FromPort: 88
          ToPort: 88
          CidrIp: 10.0.0.0/8
        -
          # NTP
          IpProtocol: udp
          FromPort: 123
          ToPort: 123
          CidrIp: 10.0.0.0/8
        -
          # RPC
          IpProtocol: tcp
          FromPort: 135
          ToPort: 135
          CidrIp: 10.0.0.0/8
        -
          # Netlogon
          IpProtocol: udp
          FromPort: 137
          ToPort: 138
          CidrIp: 10.0.0.0/8
        -
          # LDAP(tcp)
          IpProtocol: tcp
          FromPort: 389
          ToPort: 389
          CidrIp: 10.0.0.0/8
        -
          # LDAP(udp)
          IpProtocol: udp
          FromPort: 389
          ToPort: 389
          CidrIp: 10.0.0.0/8
        -
          # SMB(tcp)
          IpProtocol: tcp
          FromPort: 445
          ToPort: 445
          CidrIp: 10.0.0.0/8
        -
          # SMB(udp)
          IpProtocol: udp
          FromPort: 445
          ToPort: 445
          CidrIp: 10.0.0.0/8
        -
          # Kerberos(tcp)
          IpProtocol: tcp
          FromPort: 464
          ToPort: 464
          CidrIp: 10.0.0.0/8
        -
          # Kerberos(udp)
          IpProtocol: udp
          FromPort: 464
          ToPort: 464
          CidrIp: 10.0.0.0/8
        -
          # LDAPS(LDAP over TLS/SSL)
          IpProtocol: tcp
          FromPort: 636
          ToPort: 636
          CidrIp: 10.0.0.0/8
        -
          # Rsync
          IpProtocol: tcp
          FromPort: 873
          ToPort: 873
          CidrIp: 10.0.0.0/8
        -
          # Global catalog
          IpProtocol: tcp
          FromPort: 3268
          ToPort: 3269
          CidrIp: 10.0.0.0/8
        -
          # RPC Temporary(tcp)
          IpProtocol: tcp
          FromPort: 1024
          ToPort: 65535
          CidrIp: 10.0.0.0/8
        -
          # RPC Temporary(udp)
          IpProtocol: udp
          FromPort: 1024
          ToPort: 65535
          CidrIp: 10.0.0.0/8
        -
          # ICMP
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 10.0.0.0/8

Outputs:
  #------------------ VPC
  InternalAdSGId:
    Description: InternalAdSG
    Value: !Ref InternalAdSG
    Export:
      Name: !Sub "${AWS::StackName}-InternalAdSGId"
